-----------------------------------------------------------------------------------------
	$Id: ChangeLog,v 1.64 2007-09-07 00:19:14 remko Exp $
-----------------------------------------------------------------------------------------

2007-09-07	remko
	* sample1d.c:		Added -Fn for no interpolation (return value of neareast point).
	* gmtdefaults.txt, gmt_init.c:	Added support for INTERPOLANT=none (no interpolation).
	* gmt_support.[ch]:	Added interpolant=3 (no interpolation) in GMT_intpol;
				Added routine GMT_weighted_average.
	* gmt_map.c:		Renamed genper_grd_forward to GMT_genper_forward, and removed some bugs.
				Replaced some common code by GMT_weighted_average.
				Added GMT_default_forward for default grid rendering (with smoothing).
				Added GMT_tiles_forward for grid rendering without interpolation.
	* gmt_proj.c, gmt_project.h:	Made some GENPER stuff more aesthetic.

2007-09-04	pwessel
	* gshhs/gshhstograss.c:	Removed use of getopt so even the lamest systems can compile it.
				Also made in possible to compile under Windows.
				
2007-09-04	remko
	* All makefiles:	Improved support for .exe extensions.
				No longer compiles everything when one source changes.
				Installation of manpages moved to src/makefile.
				Closer to getting rid of gurumake.
	* src/explain_{fill,pen,color}.txt:	Made sections into subsections.

2007-08-29	pwessel
	* pshistogram.c:	-C for center bins now -F (-C still works for backwardness)
				Now takes -C<cpt> to color bars based on mid x-value.
	* gmt_support.c:	Enhancement: CPT files may now be setup for categorical data
				e.g, records are <key>	<fill> <label>, where <key> is an
				integer that is monotonically increasing but not necessarily
				continuous.  Used to support plotting of categorical data
				on which interpolation is not defined.
2007-08-28	pwessel
	* mapproject.c:		Enhancement: -G-[unit] will calculate incremental distance rather
				than the default cumulative distances.